<resources>
    <string name="app_name">BMI_Calculator</string>
    <string-array name="categories">
        <item>Индекс массы тела</item>
        <item>Уровень двигательной активности</item>
        <item>Коэффицент выносливости</item>
        <item>Уровень регуляции сердечно-сосудистой системы</item>
        <item>Жизненный индекс</item>
        <item>Циркулярно-респираторный коэффицент Скибински</item>
        <item>Вегетативный индекс Кердо</item>
        <item>Индекс функциональных изменений</item>
    </string-array>

    <!--    String for buttons on calculators tab-->
    <string name="bmi_calculator">Индекс массы тела</string>
    <string name="level_motor_ability">Уровень двигательной активности</string>
    <string name="stamina_coef">Коэффицент выносливости</string>
    <string name="cardio_regulation">Уровень регуляции сердечно-сосудистой системы</string>
    <string name="life_index">Жизненный индекс</string>
    <string name="skibinski_index">Циркулярно-респираторный коэффицент</string>
    <string name="vegetative_index">Вегетативный индекс</string>
    <string name="functional_changes">Уровень функциональных изменений</string>
    <string name="go_back">Вернуться</string>
    <string name="continue_button">Продолжить</string>
    <string name="Define">Укажите:</string>
    <string name="sex">Пол:</string>
    <string name="man">муж.</string>
    <string name="woman">жен.</string>
    <string name="age">Возраст:</string>
    <string name="reu">рэу</string>
    <string name="BMI_title">Индекс массы тела</string>
    <string name="BMI_desc">Индекс оценивает степень соответствия массы тела человека и роста, в результате определения индекса можна косвенно судить о норме, недостатке или избыточной массе тела.</string>
    <string name="weight">Вес:</string>
    <string name="kg">(кг)</string>
    <string name="height">Рост:</string>
    <string name="cm">(см)</string>
    <string name="Calculate">Определить</string>
    <string name="mm_hg">(мм рт. ст.)</string>
    <string name="SAP">САД (сист. арт. давление):</string>
    <string name="bpm">(уд./мин.)</string>
    <string name="heartrate">ЧСС:</string>
    <string name="Cardio_title">Уровень регуляции сердечно-сосудистой системы</string>
    <string name="Cardio_desc">Индекс используется для косвенного определения степени обеспеченности мокарда кислородом.</string>
    <string name="FunctionChanges_title">Индекс функциональных изменений</string>
    <string name="FunctionalChange_desc">С помощью этого теста оценивают функциональные возможности системы кровообращения.</string>
    <string name="DAP">ДАД (диаст. давлен.):</string>
    <string name="years">(лет)</string>
    <string name="LifeIndex_title">Жизненные индекс (мл/кг)</string>
    <string name="LifeIndex_desc">Дает косвенное представление о функциональных возможностях системы внешнего дыхания. \nДля определения индекса вам понадобитсчя спирометр.</string>
    <string name="ml">(мл)</string>
    <string name="lungsVolume">Жизненная емкость легких (ЖЕЛ):</string>
    <string name="MotorAbility_title">Уровень двигательной активности</string>
    <string name="MotorAbility_desc">Количество шагов в сутки (средний результат за год)</string>
    <string name="SkibinskiIndex_title">Циркулярно респираторный коэффицент Скибински.</string>
    <string name="SkibinskiIndex_desc">Определяющий резервы и выносливость дыхательной и сердечно-сосудистой систем.</string>
    <string name="Stange_desc">Проба Штанге (сек) - макс. задержка на вдохе, которая определяет гипоксическую устойчивость организма.</string>
    <string name="Stange">Штанге:</string>
    <string name="sec">(сек.)</string>
    <string name="Stamina_title">Коэффицент выносливости (усл. ед.)</string>
    <string name="Stamina_desc">Характеризует функциональное состояние сердечно-сосудистой системы.</string>
    <string name="Vegetative_title">Вегетативный индекс Кердо</string>
    <string name="Vegetative_desc">Оценивает состояние вегетативной нервной системы</string>
    <string name="HomeTitle">Онлайн калькулятор функционального состояния индекса массы тела</string>
    <string name="EightIndexes">8 показателей</string>
    <string name="heart_image">heart image</string>
    <string name="plus">+</string>
    <string name="lungs_image">lungs image</string>
    <string name="bmi">BMI</string>
    <string name="Results">Результаты:</string>
    <string name="Home_MenuTab">Дом</string>
    <string name="Calculators_MenuTab">Калькуляторы</string>
    <string name="Results_MenuTab">Результаты</string>
    <string name="clear">Clear</string>
</resources>