<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Calculator.LifeIndex">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/LifeIndex_title"
        android:textSize="25sp"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/LifeIndex_desc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <TableRow
            android:gravity="center_vertical"
            android:weightSum="5">
            <TextView
                android:text="@string/weight"
                android:layout_weight="3" />

            <EditText
                android:id="@+id/weight"
                android:minWidth="100dp"
                android:layout_weight="2"
                android:inputType="numberDecimal"
                android:importantForAutofill="no" />

            <TextView
                android:text="@string/kg"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:weightSum="5">
            <TextView
                android:text="@string/lungsVolume"
                android:layout_weight="3" />

            <EditText
                android:id="@+id/lungsVolume"
                android:minWidth="100dp"
                android:layout_weight="2"
                android:inputType="numberDecimal"/>

            <TextView
                android:text="@string/ml"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:text="@string/Calculate"/>

</androidx.constraintlayout.widget.ConstraintLayout>