<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <!--    title-->
    <TextView
        android:id="@+id/txtStartupTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/HomeTitle"
        android:textSize="35sp"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <!--    signature with REU logo-->
    <LinearLayout
        android:id="@+id/first_row"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStartupTitle">
        <TextView
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/EightIndexes" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_marginEnd="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/reu_logo"
            android:contentDescription="@string/reu" />
    </LinearLayout>

    <!--    organs    -->
    <LinearLayout
        android:id="@+id/second_row"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_row">
        <ImageView
            android:layout_marginStart="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/heart_logo"
            android:contentDescription="@string/heart_image" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="35sp"
            android:text="@string/plus" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_marginEnd="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/lungs_logo"
            android:contentDescription="@string/lungs_image" />
    </LinearLayout>

    <!--    plus and bmi text-->
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/thidr_row"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/second_row">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="35sp"
            android:text="@string/plus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="italic"
            android:text="@string/bmi" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>